Bug 123259 - Assert when add a new line after a form control (in design mode)
Summary: Assert when add a new line after a form control (in design mode)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2019-02-08 09:41 UTC by Tamás Zolnai
Modified: 2019-05-03 08:28 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document with a label form control (8.40 KB, application/vnd.oasis.opendocument.text)
2019-02-08 09:43 UTC, Tamás Zolnai
Details
bt with debug symbols (14.82 KB, text/plain)
2019-03-03 11:28 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2019-02-08 09:41:12 UTC
Description:
This bug is about an assertion so affects only developers and debug build, but might point out a bigger problem.
When I push enter after the position of a form control LO crashes, because of an assertion. See reproducer steps, it happens only after selecting the form control in design mode.

Steps to Reproduce:
1. Open attached test document
2. Enable design mode (Forms -> Design Mode)
3. Click on the label control (it becomes selected)
4. Click out of the control on the right side of it -> control becomes deselected and the cursor appears after the control
5. Push enter -> crash

Actual Results:
Assertion / crash

Expected Results:
Should not assert / crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Tamás Zolnai 2019-02-08 09:43:15 UTC
Created attachment 149017 [details]
Test document with a label form control
Comment 2 Tamás Zolnai 2019-02-08 09:45:02 UTC
The assertion was added in this commit:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c5abcfdf0c2e98c8f3445a92dd2d71eab23a7268
Comment 3 Durgapriyanka 2019-02-08 17:33:02 UTC
I cannot reproduce the bug.

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 4 Buovjaga 2019-02-12 18:40:50 UTC
Could not repro. Was running a build from TB39, which is supposed to be a debug build.
Comment 5 Tamás Zolnai 2019-02-14 09:53:18 UTC
I found the issue on linux (openSUSE). Maybe it's platform specific issue, that's why you can't repro it on Windows.
Comment 6 Julien Nabet 2019-03-03 11:28:15 UTC
Created attachment 149690 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + enable-dbgutil, I had an assert.
Comment 7 Michael Stahl 2019-03-08 10:55:28 UTC
fixed on master
Comment 8 Commit Notification 2019-03-08 10:57:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/468ac1bdf1dcdc1f0d679ae2a7bf75102333c0af%5E%21

tdf#123259 sw_redlinehide: fix reanchoring of drawing objects

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-03-10 00:23:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/214e6ed5286566e689a4ef13a9115e2ad38fff57%5E%21

tdf#123259 sw_redlinehide: fix reanchoring of drawing objects

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.