tdf#123259 sw_redlinehide: fix reanchoring of drawing objects

... in SplitNode.

The problem is that first the new anchor position is set in the
SwFrameFormat, then SwDrawContact::DisconnectFromLayout() is called
(implicitly from its SwClientNotify()).

This then cause the a11y wrapper to be disposed and an event to be sent,
which then ATKListener::notifyEvent() immediately processes by
retrieving all of the children of the anchor SwTextFrame.

At this point, we get an assert from SwTextFrame::MapModelToView,
because the layout anchor frame is still the old one, but the model
format already has the new position, so the frame can't map the
anchor position.

Avoid this by explicitly disconnecting from the layout before setting
the anchor on the SwFrameFormat.

Change-Id: Iba8960729dd041e13de4963d1b2ab6b223c8a427